--- a/assets/global/landing_unxpsj.css
+++ b/assets/global/landing_unxpsj.css
@@ -1670,7 +1670,7 @@ ul {
 .we-offer-area {
   padding: 113px 0 120px 0;
   background-color: var(--color-2);
-  background-image: url(https://res.cloudinary.com/dw8lywl8p/image/upload/v1641231578/topranksmm.site/bg-we-offer-bg_u2iwgm.jpg);
+  background-image: url(https://cdn.statically.io/gh/topranksmm/homepage1/main/assets/global/toprank-we-offer-bg.jpg);
   background-position: center;
   background-size: cover; }
 
